// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structured list component should render a multilink list table 1`] = `
<Fragment>
  <h3>
    Some OpenStack Stuff
  </h3>
  <FeatureToggle(StructuredListWrapper)
    ariaLabel="Structured list"
    className="miq-structured-list multilink_table"
  >
    <FeatureToggle(StructuredListBody)>
      <FeatureToggle(StructuredListRow)
        key="0"
        tabIndex={0}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          <div
            className="content"
          >
            Aodh
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=1&status=running"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of running Aodh"
              >
                <i
                  className="pficon pficon-ok"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of running Aodh"
                />
              </div>
              Running (3)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Failed (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=1&status=all"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of all Aodh"
              >
                <i
                  className="pficon pficon-service"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of all Aodh"
                />
              </div>
              All (3)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
              title="Show list of configuration files of Aodh"
            >
              <i
                className="fa fa-file-o"
                style={
                  Object {
                    "background": undefined,
                  }
                }
                title="Show list of configuration files of Aodh"
              />
            </div>
            Configuration (0)
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="1"
        tabIndex={1}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          <div
            className="content"
          >
            Ceilometer
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=2&status=running"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of running Ceilometer"
              >
                <i
                  className="pficon pficon-ok"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of running Ceilometer"
                />
              </div>
              Running (3)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Failed (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=2&status=all"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of all Ceilometer"
              >
                <i
                  className="pficon pficon-service"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of all Ceilometer"
                />
              </div>
              All (3)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
              title="Show list of configuration files of Ceilometer"
            >
              <i
                className="fa fa-file-o"
                style={
                  Object {
                    "background": undefined,
                  }
                }
                title="Show list of configuration files of Ceilometer"
              />
            </div>
            Configuration (0)
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="2"
        tabIndex={2}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          <div
            className="content"
          >
            Cinder
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=3&status=running"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of running Cinder"
              >
                <i
                  className="pficon pficon-ok"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of running Cinder"
                />
              </div>
              Running (3)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Failed (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=3&status=all"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of all Cinder"
              >
                <i
                  className="pficon pficon-service"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of all Cinder"
                />
              </div>
              All (3)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
              title="Show list of configuration files of Cinder"
            >
              <i
                className="fa fa-file-o"
                style={
                  Object {
                    "background": undefined,
                  }
                }
                title="Show list of configuration files of Cinder"
              />
            </div>
            Configuration (0)
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="3"
        tabIndex={3}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          <div
            className="content"
          >
            Glance
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=4&status=running"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of running Glance"
              >
                <i
                  className="pficon pficon-ok"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of running Glance"
                />
              </div>
              Running (2)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Failed (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=4&status=all"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of all Glance"
              >
                <i
                  className="pficon pficon-service"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of all Glance"
                />
              </div>
              All (2)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
              title="Show list of configuration files of Glance"
            >
              <i
                className="fa fa-file-o"
                style={
                  Object {
                    "background": undefined,
                  }
                }
                title="Show list of configuration files of Glance"
              />
            </div>
            Configuration (0)
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="4"
        tabIndex={4}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          <div
            className="content"
          >
            Gnocchi
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=5&status=running"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of running Gnocchi"
              >
                <i
                  className="pficon pficon-ok"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of running Gnocchi"
                />
              </div>
              Running (2)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Failed (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=5&status=all"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of all Gnocchi"
              >
                <i
                  className="pficon pficon-service"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of all Gnocchi"
                />
              </div>
              All (2)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
              title="Show list of configuration files of Gnocchi"
            >
              <i
                className="fa fa-file-o"
                style={
                  Object {
                    "background": undefined,
                  }
                }
                title="Show list of configuration files of Gnocchi"
              />
            </div>
            Configuration (0)
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="5"
        tabIndex={5}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          <div
            className="content"
          >
            Heat
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=6&status=running"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of running Heat"
              >
                <i
                  className="pficon pficon-ok"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of running Heat"
                />
              </div>
              Running (4)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Failed (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=6&status=all"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of all Heat"
              >
                <i
                  className="pficon pficon-service"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of all Heat"
                />
              </div>
              All (4)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
              title="Show list of configuration files of Heat"
            >
              <i
                className="fa fa-file-o"
                style={
                  Object {
                    "background": undefined,
                  }
                }
                title="Show list of configuration files of Heat"
              />
            </div>
            Configuration (0)
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="6"
        tabIndex={6}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          <div
            className="content"
          >
            Keystone
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Running (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Failed (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=7&status=all"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of all Keystone"
              >
                <i
                  className="pficon pficon-service"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of all Keystone"
                />
              </div>
              All (1)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
              title="Show list of configuration files of Keystone"
            >
              <i
                className="fa fa-file-o"
                style={
                  Object {
                    "background": undefined,
                  }
                }
                title="Show list of configuration files of Keystone"
              />
            </div>
            Configuration (0)
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="7"
        tabIndex={7}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          <div
            className="content"
          >
            Nova
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=8&status=running"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of running Nova"
              >
                <i
                  className="pficon pficon-ok"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of running Nova"
                />
              </div>
              Running (5)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Failed (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=8&status=all"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of all Nova"
              >
                <i
                  className="pficon pficon-service"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of all Nova"
                />
              </div>
              All (10)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
              title="Show list of configuration files of Nova"
            >
              <i
                className="fa fa-file-o"
                style={
                  Object {
                    "background": undefined,
                  }
                }
                title="Show list of configuration files of Nova"
              />
            </div>
            Configuration (0)
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="8"
        tabIndex={8}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          <div
            className="content"
          >
            Swift
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=9&status=running"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of running Swift"
              >
                <i
                  className="pficon pficon-ok"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of running Swift"
                />
              </div>
              Running (14)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            Failed (0)
          </div>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <a
            className="cell_link"
            href="/host/host_services/18?db=host&host_service_group=9&status=all"
            onClick={[Function]}
          >
            <div
              className="content"
            >
              <div
                className="cell icon"
                title="Show list of all Swift"
              >
                <i
                  className="pficon pficon-service"
                  style={
                    Object {
                      "background": undefined,
                    }
                  }
                  title="Show list of all Swift"
                />
              </div>
              All (14)
            </div>
          </a>
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value sub_items"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
              title="Show list of configuration files of Swift"
            >
              <i
                className="fa fa-file-o"
                style={
                  Object {
                    "background": undefined,
                  }
                }
                title="Show list of configuration files of Swift"
              />
            </div>
            Configuration (0)
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
    </FeatureToggle(StructuredListBody)>
  </FeatureToggle(StructuredListWrapper)>
</Fragment>
`;

exports[`Structured list component should render a operation range list table 1`] = `
<Fragment>
  <h3>
    Operation Ranges
  </h3>
  <FeatureToggle(StructuredListWrapper)
    ariaLabel="Structured list"
    className="miq-structured-list operation_ranges"
  >
    <FeatureToggle(StructuredListBody)>
      <FeatureToggle(StructuredListRow)
        key="0"
        tabIndex={0}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          CPU
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value"
        >
          <div
            className="content"
          >
            <div
              className="multi_row_cell"
            >
              <div
                className="sub_row_item"
                key="0"
              >
                <div
                  className="sub_label"
                >
                  Max
                </div>
                <div
                  className="sub_value"
                >
                  Not Available
                </div>
              </div>
              <div
                className="sub_row_item"
                key="1"
              >
                <div
                  className="sub_label"
                >
                  High
                </div>
                <div
                  className="sub_value"
                >
                  0 MHz
                </div>
              </div>
              <div
                className="sub_row_item"
                key="2"
              >
                <div
                  className="sub_label"
                >
                  Average
                </div>
                <div
                  className="sub_value"
                >
                  0 MHz
                </div>
              </div>
              <div
                className="sub_row_item"
                key="3"
              >
                <div
                  className="sub_label"
                >
                  Low
                </div>
                <div
                  className="sub_value"
                >
                  0 MHz
                </div>
              </div>
            </div>
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="1"
        tabIndex={1}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          CPU Usage
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value"
        >
          <div
            className="content"
          >
            <div
              className="multi_row_cell"
            >
              <div
                className="sub_row_item"
                key="0"
              >
                <div
                  className="sub_label"
                >
                  Max
                </div>
                <div
                  className="sub_value"
                >
                  Not Available
                </div>
              </div>
              <div
                className="sub_row_item"
                key="1"
              >
                <div
                  className="sub_label"
                >
                  High
                </div>
                <div
                  className="sub_value"
                >
                  0.00%
                </div>
              </div>
              <div
                className="sub_row_item"
                key="2"
              >
                <div
                  className="sub_label"
                >
                  Average
                </div>
                <div
                  className="sub_value"
                >
                  0.00%
                </div>
              </div>
              <div
                className="sub_row_item"
                key="3"
              >
                <div
                  className="sub_label"
                >
                  Low
                </div>
                <div
                  className="sub_value"
                >
                  0.00%
                </div>
              </div>
            </div>
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
    </FeatureToggle(StructuredListBody)>
  </FeatureToggle(StructuredListWrapper)>
</Fragment>
`;

exports[`Structured list component should render a simple list table 1`] = `
<Fragment>
  <h3>
    Foo Bar
  </h3>
  <FeatureToggle(StructuredListWrapper)
    ariaLabel="Structured list"
    className="miq-structured-list simple_table"
  >
    <FeatureToggle(StructuredListBody)>
      <FeatureToggle(StructuredListRow)
        key="0"
        tabIndex={0}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          foo
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value"
        >
          <div
            className="content"
          >
            bar
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="1"
        tabIndex={1}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          mrkef?
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value"
        >
          <div
            className="content"
          >
            v zime!
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
    </FeatureToggle(StructuredListBody)>
  </FeatureToggle(StructuredListWrapper)>
</Fragment>
`;

exports[`Structured list component should render a simple table list table 1`] = `
<Fragment>
  <h3>
    Firewall Rules
  </h3>
  <FeatureToggle(StructuredListWrapper)
    ariaLabel="Structured list"
    className="miq-structured-list simple_table"
  >
    <FeatureToggle(StructuredListBody) />
  </FeatureToggle(StructuredListWrapper)>
</Fragment>
`;

exports[`Structured list component should render a tag group list table 1`] = `
<Fragment>
  <h3>
    Smart Management
  </h3>
  <FeatureToggle(StructuredListWrapper)
    ariaLabel="Structured list"
    className="miq-structured-list tag_group"
  >
    <FeatureToggle(StructuredListBody)>
      <FeatureToggle(StructuredListRow)
        key="0"
        tabIndex={0}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          Managed by Zone
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value"
        >
          <div
            className="content"
          >
            <div
              className="cell icon"
            >
              <i
                className="pficon pficon-zone"
                style={
                  Object {
                    "background": undefined,
                  }
                }
              />
            </div>
            default
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="1"
        tabIndex={1}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          My Company X Tags
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value"
        >
          <div
            className="content"
          >
            <div
              className="multi_row_cell"
            >
              <div
                className="sub_row_item"
                key="0"
              >
                <div
                  className="cell icon"
                >
                  <i
                    className="fa fa-tag"
                    style={
                      Object {
                        "background": undefined,
                      }
                    }
                  />
                </div>
                <div
                  className="sub_label"
                >
                  Dan Test
                </div>
                <div
                  className="sub_value"
                >
                  Test 1
                </div>
              </div>
              <div
                className="sub_row_item"
                key="1"
              >
                <div
                  className="cell icon"
                >
                  <i
                    className="fa fa-tag"
                    style={
                      Object {
                        "background": undefined,
                      }
                    }
                  />
                </div>
                <div
                  className="sub_label"
                >
                  Demo bla
                </div>
                <div
                  className="sub_value"
                >
                  Policy,2
                </div>
              </div>
            </div>
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
      <FeatureToggle(StructuredListRow)
        key="2"
        tabIndex={2}
      >
        <FeatureToggle(StructuredListCell)
          className="label_header"
        >
          Other Tags
        </FeatureToggle(StructuredListCell)>
        <FeatureToggle(StructuredListCell)
          className="content_value"
        >
          <div
            className="content"
          >
            <div
              className="multi_row_cell"
            >
              <div
                className="sub_row_item"
                key="0"
              >
                <div
                  className="cell icon"
                >
                  <i
                    className="fa fa-tag"
                    style={
                      Object {
                        "background": undefined,
                      }
                    }
                  />
                </div>
                <div
                  className="sub_label"
                >
                  Test
                </div>
                <div
                  className="sub_value"
                >
                  Test 1
                </div>
              </div>
              <div
                className="sub_row_item"
                key="1"
              >
                <div
                  className="cell icon"
                >
                  <i
                    className="fa fa-tag"
                    style={
                      Object {
                        "background": undefined,
                      }
                    }
                  />
                </div>
                <div
                  className="sub_label"
                >
                  Demo 2
                </div>
                <div
                  className="sub_value"
                >
                  Policy,2,3
                </div>
              </div>
              <div
                className="sub_row_item"
                key="2"
              >
                <div
                  className="sub_value"
                >
                  Demo 3
                </div>
              </div>
            </div>
          </div>
        </FeatureToggle(StructuredListCell)>
      </FeatureToggle(StructuredListRow)>
    </FeatureToggle(StructuredListBody)>
  </FeatureToggle(StructuredListWrapper)>
</Fragment>
`;
